# cogmyra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  75178out  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  Makefile.patch  Makefile.placeholders  README.md  asgi.py  chat-demo.html  cogmyra_logs.db  deploy-web-safe.sh  index.html  interactions.db  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish.yml  verify-ids.yml
cogmyra-proxy/: package-lock.json  package.json  wrangler.jsonc
cogmyra-proxy/src/: index.ts
docs/: 404.html  CNAME  _header.html  data-requests.html  header.html  index.html  myths.html  privacy.html  robots.txt  site.css  sitemap.xml  status.json  terms.html
docs/assets/: index-CtTwd_6l.js
docs/data-requests/: index.html
docs/guide/: app.js  app.v1.js  chat.v1.js  index.html  styles.css
docs/knowledge/: README.md  SCHEMA.md  index.json  sample.md
docs/knowledge/checks/: cmg_header_1_15.csv  cmg_header_1_15_from_index.jsonl.csv  cmg_ids_1-15_categories.txt  cmg_ids_16_30_categories.txt  cmg_ids_1_15_categories.txt  cmg_ids_all_categories.txt
docs/knowledge/src/: CMG_EmotionSensitiveFramework_v1.0_2025-08-05.csv  CMG_EnvironmentFramework_v1.0_2025-08-05.csv  (+11 more)
docs/myths/: index.html
docs/terms/: index.html
scripts/: diag_admin_export.sh  discover_and_try_export.sh  export_logs.sh  extract_ids.py  extract_ids_from_csv.py  print_ids.py  rebuild_index_from_csv.py  rotate_secrets.py  run_export_from_launchd.sh
scripts/embed/: build.mjs
server/: main.py  main.py.bak.1758052137  main.py.bak.1758052218  main.py.bak.1758476049  requirements.txt
server/logs/: events.jsonl
src/cogmyra/: __init__.py  cli.py  core.py  memory.py
tests/: test_cli.py  test_core.py  tests_memory.py  tests_persistence.py  tests_session.py
ui/public/: chat-demo.html  stream-test.html
ui/src/lib/: cogmyra.ts
