[tool.poetry]
name = "cogmyra"
version = "0.3.5"
description = "CogMyra local API (FastAPI + OpenAI) for chat + logging"
authors = ["CogMyra"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# runtime deps only (safe for Render)
fastapi = "^0.111.1"
uvicorn = "^0.30.6"          # no extras -> avoids watchfiles
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
openai = "^1.44.0"
email-validator = "^2.3.0"

# ── dev-only deps (WILL NOT be installed on Render) ────────────────────────────
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
fastapi-cli = "^0.0.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
